--- a/templates/main.html
+++ b/templates/main.html
@@ -1,15 +1,27 @@
 <!doctype html>
 
 <html>
-  <head>
-    <title>Hello hello, world!</title>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
-  </head>
+	<link rel="stylesheet" href="https://unpkg.com/mirotone/dist/styles.css">
   <body>
-    <h1>Hello, world!</h1>
-    <p>
-      Joo. This is a simple static HTML file that will be served from Google App
-      Engine.
-    </p>
+    <h1>Your Meeting Analysis</h1>
+		<div class="grid">
+<!-- tabs -->
+		<div class="tabs">
+			<div class="tabs-header-list">
+				<div tabindex="0" class="tab tab-active">
+					<div class="tab-text tab-badge">Meeting Positivity</div>
+				</div>
+				<div tabindex="0" class="tab">
+					<div class="tab-text tab-badge">Meeting Activity</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- <embed type="text/html" src="file.html" width="500">-->
+<!-- assets -->
+	<div class="cs1 ce12 placeholder"></div>
+	<div class="cs1 ce12 placeholder"></div>
+	<div class="cs1 ce12 placeholder"></div>
+</div>
   </body>
 </html>
